Added pages directories and modified refs.

--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
                     </a>
                 </li>
                  <li>
-                    <a href="installation.html">Planet Installation</a>
+                    <a href="pages/swift/installation.html">Planet Installation</a>
                 </li>
                  <li>
-                    <a href="basics.html">Planet Basics</a>
+                    <a href="pages/swift/basics.html">Planet Basics</a>
                 </li>
                 <li>
-                    <a href="loops.html">Planet Loops</a>
+                    <a href="pages/swift/loops.html">Planet Loops</a>
                 </li>
                 <li>
-                    <a href="conditionals.html">Planet Conditionals</a>
+                    <a href="pages/swift/conditionals.html">Planet Conditionals</a>
                 </li>
                   <li>
-                    <a href="variables.html">Planet Arrays</a>
+                    <a href="pages/swift/variables.html">Planet Arrays</a>
                 </li>
                 <li>
-                    <a href="functions.html">Planet Functions</a>
+                    <a href="pages/swift/functions.html">Planet Functions</a>
                 </li>
 
                 <li>
