--- a/ios.html
+++ b/ios.html
@@ -43,29 +43,29 @@
                     </a>
                 </li>
                  <li>
-                    <a href="newproject.html">New Project</a>
+                    <a href="pages/ios/newproject.html">New Project</a>
                 </li>
                  <li>
-                    <a href="importingimages.html">Importing Images</a>
+                    <a href="pages/ios/importingimages.html">Importing Images</a>
                 </li>
                 <li>
-                    <a href="basicui.html">Basic UI</a>
+                    <a href="pages/ios/basicui.html">Basic UI</a>
                 </li>
                 <li>
-                    <a href="autolayout.html">Autolayout</a>
+                    <a href="pages/ios/autolayout.html">Autolayout</a>
                 </li>
                   <li>
-                    <a href="outlets.html">Outlets and Actions</a>
+                    <a href="pages/ios/outlets.html">Outlets and Actions</a>
                 </li>
                 <li>
-                    <a href="segues.html">Segues</a>
+                    <a href="pages/ios/segues.html">Segues</a>
                 </li>
 
                 <li>
-                    <a href="advancedui.html">Advanced UI</a>
+                    <a href="pages/ios/advancedui.html">Advanced UI</a>
                 </li>
                  <li>
-                    <a href="wholeapp.html">A Whole App</a>
+                    <a href="pages/ios/wholeapp.html">A Whole App</a>
                 </li>
 
 
