--- a/pages/ios/autolayout.html
+++ b/pages/ios/autolayout.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,45 +30,44 @@
 
     <div id="wrapper">
 
-        <!-- Sidebar -->
+       <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
-                <li>
-                    <a href="installation.html">Planet Installation</a>
-                </li>
-               <li>
-                    <a href="basics.html">Planet Basics</a>
-                </li>
-                <li>
-                    <a href="loops.html">Planet Loops</a>
-                </li>
-                <li>
-                    <a href="conditionals.html">Planet Conditionals</a>
+                 <li>
+                    <a href="newproject.html">New Project</a>
                 </li>
                  <li>
-                    <a href="variables.html">Planet Arrays</a>
+                    <a href="importingimages.html">Importing Images</a>
                 </li>
                 <li>
-                    <a href="functions.html">Planet Functions</a>
+                    <a href="basicui.html">Basic UI</a>
+                </li>
+                <li>
+                    <a href="autolayout.html">Autolayout</a>
+                </li>
+                  <li>
+                    <a href="outlets.html">Outlets and Actions</a>
+                </li>
+                <li>
+                    <a href="segues.html">Segues</a>
                 </li>
 
                 <li>
-                    <a href="#">Planet Test Yourself</a>
+                    <a href="advancedui.html">Advanced UI</a>
                 </li>
                  <li>
-                    <a href="ios.html">Planet iOS</a>
+                    <a href="wholeapp.html">A Whole App</a>
                 </li>
-                  <li>
-                    <a href="about.html">About Us</a>
-                </li>
+
 
 
             </ul>
+
 
 
 
@@ -85,10 +84,10 @@
 
 
 <div id="centerDiv">
-<h3 align="center">Lesson 4: Conditionals</h3>
-
-<h4>Objective:</h4>
-<p>In this lesson you will learn how to use ‘If statements’. If statements are useful for making certain blocks of code run only when the condition is met. While a simple mechanic, the many possible applications and therefore, it is beneficial that you fully understand them in order to be a better programmer.</p>
+<h3 align="center">Lesson 4: Autolayout </h3>
+ <p>So far we’ve been getting XCode to automatically layout our apps for us. Sometimes it doesn’t come out very nicely. You can use “autolayout” to tell the app how you want it to look. You can make it look good no matter which device it runs on.</p>
+<h4>Goal:</h4>
+<p>In this lesson, you will learn how to use autolayout to decide where you want the views in your app to be. You will learn to line up views and determine their sizes. Your apps still won’t do very much but they should look well made.</p>
 
 <h4>Demonstration:</h4>
 
@@ -100,9 +99,10 @@
 <p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
 
 <ul>
-<li>Write a program that prints “Launch successful” if the user inputs a number less than 3 and “Launch failed” otherwise</li>
-<li>Write a program that prints “Launch successful” if the user inputs a number less than 3, “Launch delayed” if less than 8 and “Launch failed” otherwise</li>
-<li>Write a program that takes an input from the user, and identifies if it’s an integer or a character, and then indicates if it’s in</li>
+<li>Design an app using views and run it on different devices. Make sure the app looks nice on all the different screens.</li>
+<li>Look at the example apps for the lesson. Can you use autolayout to make them look good?
+</li>
+
 </ul>
 
 <h4>Answers:</h4>
@@ -112,10 +112,11 @@
 
 
 
+
 </div>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="variables.html">
+    <a href="outlets.html">
          <img src="img/link1.png">
     </a>
 </div>
