--- a/pages/ios/basicui.html
+++ b/pages/ios/basicui.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,11 +30,11 @@
 
     <div id="wrapper">
 
-       <!-- Sidebar -->
+      <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
@@ -84,16 +84,49 @@
 
 
 <div id="centerDiv">
-<h2>Congratulations!</h2>
-<p>You have completed your journey through The Solar Swiftem and are now a Swift expert!</p>
-<p>You may now return home to keep practicing your skills!</p>
-<p>Don't forget there is always space in the Solar Swiftem for you to brush up on any forgotten knowledge :)</p>
+<h3 align="center">Lesson 3: Basic UI Elements and properties </h3>
+ <p>Apps can be designed by adding different objects to the view. These include things like images and buttons. They won’t be able to do anything yet in this lesson but you should be able to make your app look really good.
+</p>
+<h4>Goal:</h4>
+<p>In this lesson, you will learn to design your apps using some of the basic views. You will be introduced to UILabel, UITextField, UIImageView and UIButton. You will also learn how to change properties like text and colour to customise those views.</p>
+
+<h4>Demonstration:</h4>
+
+<p>Videos will be added after/during reading week</p>
+
+<p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
+
+<h4>Exercises:</h4>
+<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
+
+<ul>
+<li>Make an app with an image and a label to describe the image.
+</li>
+<li>Make an app with an image and a text field that the user can use to describe the image.
+</li>
+<li>Make an app with an animation using the images from this lesson.
+</li>
+</ul>
+
+<h4>Answers:</h4>
+<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
+
 
 
 
 </div>
+<div id="rightcolumn">
+    <div class="link-button-wrapper">
+    <a href="autolayout.html">
+         <img src="img/link1.png">
+    </a>
+</div>
 
 
+</div>
+<div id="moveOn">
+    <p>Carry on the journey</p>
+</div>
 
 
 
