--- a/pages/ios/endpage.html
+++ b/pages/ios/endpage.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +30,7 @@
 
     <div id="wrapper">
 
-        <!-- Sidebar -->
+       <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
@@ -38,38 +38,36 @@
                         The Solar Swiftem
                     </a>
                 </li>
-
-                <li>
-                    <a href="installation.html">Planet Installation</a>
-                </li>
-                <li>
-                    <a href="basics.html">Planet Basics</a>
-                </li>
-                <li>
-                    <a href="loops.html">Planet Loops</a>
-                </li>
-                <li>
-                    <a href="conditionals.html">Planet Conditionals</a>
+                 <li>
+                    <a href="newproject.html">New Project</a>
                 </li>
                  <li>
-                    <a href="variables.html">Planet Arrays</a>
+                    <a href="importingimages.html">Importing Images</a>
                 </li>
                 <li>
-                    <a href="functions.html">Planet Functions</a>
+                    <a href="basicui.html">Basic UI</a>
                 </li>
-
                 <li>
-                    <a href="#">Planet Test Yourself</a>
-                </li>
-                 <li>
-                    <a href="ios.html">Planet iOS</a>
+                    <a href="autolayout.html">Autolayout</a>
                 </li>
                   <li>
-                    <a href="about.html">About Us</a>
+                    <a href="outlets.html">Outlets and Actions</a>
                 </li>
+                <li>
+                    <a href="segues.html">Segues</a>
+                </li>
+
+                <li>
+                    <a href="advancedui.html">Advanced UI</a>
+                </li>
+                 <li>
+                    <a href="wholeapp.html">A Whole App</a>
+                </li>
+
 
 
             </ul>
+
 
 
 
@@ -83,18 +81,21 @@
         </div> <!--heading -->
         <br>
 
-		<p> Functions Tutorials here </p>
 
-<div id="leftcolumn">
+
+<div id="centerDiv">
+<h2>Congratulations!</h2>
+<p>You have completed your journey through The Solar Swiftem and are now a Swift expert!</p>
+<p>You may now return home to keep practicing your skills!</p>
+<p>Don't forget there is always space in the Solar Swiftem for you to brush up on any forgotten knowledge :)</p>
+
 
 
 </div>
-<div id="rightcolumn">
 
-</div>
 
-<div id="footing">
- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>
+
+
 
 
  <p1> </p1></div>
@@ -133,6 +134,7 @@
         $("#wrapper").toggleClass("toggled");
     });
     </script>
+
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
