--- a/pages/ios/importingimages.html
+++ b/pages/ios/importingimages.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,11 +30,11 @@
 
     <div id="wrapper">
 
-      <!-- Sidebar -->
+        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
@@ -69,6 +69,7 @@
             </ul>
 
 
+
         </div>
         <br>
         <div id="heading">
@@ -82,11 +83,10 @@
 
 
 <div id="centerDiv">
-<h3 align="center">Lesson 5: Outlets & Actions </h3>
- <p>Now that you know how to make an app look like an app, it’s time to make it do something. You can add code to your app that can run when the user taps on a button.</p>
+<h3 align="center">Lesson 2: Importing Images </h3>
+ <p>You may have noticed that your app from the previous lesson had a white square for the icon. In order to make your apps look good you will need to add images. These may be used for the icon, as the background and almost anywhere you like.</p>
 <h4>Goal:</h4>
-<p>In this lesson, you will learn how to use outlets to change the views in the app when the app is running. You will also learn how to use actions to write code that runs when a button is tapped.
-</p>
+<p>In this lesson, you will learn how to make an app icon of the right size for your apps. You will also learn how to add other images which can be used in other parts of the app.</p>
 
 <h4>Demonstration:</h4>
 
@@ -98,11 +98,10 @@
 <p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
 
 <ul>
-<li>Look at the example apps from this lesson. Try and connect the outlets and actions to the right places in the view controller to make the apps work.
+<li>Make an app with the icons provided and try running it.</li>
+<li>Make an app with your own icon you made in your favourite drawing app.</li>
+<li>Add a background to your app.
 </li>
-<li>Make an app that has an animation. Make a button to start the animation and another to stop it.
-</li>
-
 </ul>
 
 <h4>Answers:</h4>
@@ -110,10 +109,12 @@
 
 
 
+
+
 </div>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="segues.html">
+    <a href="basicui.html">
          <img src="img/link1.png">
     </a>
 </div>
