--- a/pages/ios/newproject.html
+++ b/pages/ios/newproject.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,44 +30,44 @@
 
     <div id="wrapper">
 
-          <!-- Sidebar -->
+       <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
-                <li>
-                    <a href="installation.html">Planet Installation</a>
-                </li>
-               <li>
-                    <a href="basics.html">Planet Basics</a>
-                </li>
-                <li>
-                    <a href="loops.html">Planet Loops</a>
-                </li>
-                <li>
-                    <a href="conditionals.html">Planet Conditionals</a>
-                </li>
-                <li>
-                    <a href="variables.html">Planet Arrays</a>
-                </li>
-                <li>
-                    <a href="functions.html">Planet Functions</a>
-                </li>
-
-                <li>
-                    <a href="#">Planet Test Yourself</a>
+                 <li>
+                    <a href="newproject.html">New Project</a>
                 </li>
                  <li>
-                    <a href="ios.html">Planet iOS</a>
+                    <a href="importingimages.html">Importing Images</a>
+                </li>
+                <li>
+                    <a href="basicui.html">Basic UI</a>
+                </li>
+                <li>
+                    <a href="autolayout.html">Autolayout</a>
                 </li>
                   <li>
-                    <a href="about.html">About Us</a>
+                    <a href="outlets.html">Outlets and Actions</a>
+                </li>
+                <li>
+                    <a href="segues.html">Segues</a>
                 </li>
 
+                <li>
+                    <a href="advancedui.html">Advanced UI</a>
+                </li>
+                 <li>
+                    <a href="wholeapp.html">A Whole App</a>
+                </li>
+
+
+
             </ul>
+
 
 
 
@@ -84,34 +84,39 @@
 
 
 <div id="centerDiv">
-<h3 align="center">Lesson 5: Variables</h3>
-
-<h4>Objective:</h4>
-<p>In this lesson you will learn how to use collection types such as arrays and dictionaries. These are useful for managing groups of the same data type.
-
-</p>
-
+<h3 align="center">Lesson 1: Starting a new project and running </h3>
+ <p>Making apps can sound hard but this lesson will show you how easy it is to start out with something basic. You will see how quick and easy it is to get an app onto a device.</p>
+<h4>Goal:</h4>
+<p>In this lesson, you will learn how to create a new project for an app. The app won’t be that fancy but you will learn how to run it on a simulator as well as on a real iPhone/iPad.</p>
 
 <h4>Demonstration:</h4>
+
 <p>Videos will be added after/during reading week</p>
 
 <p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
 
-
 <h4>Exercises:</h4>
+<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
+
 <ul>
-<li>Write a program that fills an array of size 5 with names and uses a loop (of your choice) to print it</li>
-<li>Write a program that prints you address on separate lines</li>
-<li>Comment out your address</li>
+<li>Run this lesson’s example app on a simulator.</li>
+<li>Run this lesson’s example app on a real iOS device.
+</li>
+<li>Modify the example app to display your name and try running it.
+</li>
 </ul>
 
 <h4>Answers:</h4>
-<p><<Attach source code files for programs that solve the exercise questions. Make sure they are well commented>></p>
+<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
+
+
+
+
 
 </div>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="functions.html">
+    <a href="importingimages.html">
          <img src="img/link1.png">
     </a>
 </div>
@@ -122,8 +127,7 @@
     <p>Carry on the journey</p>
 </div>
 
-<!--<div id="footing">-->
-<!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
+
 
 
  <p1> </p1></div>
@@ -166,9 +170,10 @@
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
-	<a href="https://twitter.com/solarswiftem">
+		<a href="https://twitter.com/solarswiftem">
 		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
+
 </body>
 
 </html>
