--- a/pages/ios/outlets.html
+++ b/pages/ios/outlets.html
@@ -12,11 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
-        <link href="css/custom.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,46 +30,43 @@
 
     <div id="wrapper">
 
-        <!-- Sidebar -->
+      <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
-                <li>
-                    <a href="installation.html">Planet Installation</a>
+                 <li>
+                    <a href="newproject.html">New Project</a>
                 </li>
-               <li>
-                    <a href="basics.html">Planet Basics</a>
-                </li>
-                <li>
-                    <a href="loops.html">Planet Loops</a>
+                 <li>
+                    <a href="importingimages.html">Importing Images</a>
                 </li>
                 <li>
-                    <a href="conditionals.html">Planet Conditionals</a>
+                    <a href="basicui.html">Basic UI</a>
                 </li>
                 <li>
-                    <a href="variables.html">Planet Arrays</a>
+                    <a href="autolayout.html">Autolayout</a>
+                </li>
+                  <li>
+                    <a href="outlets.html">Outlets and Actions</a>
                 </li>
                 <li>
-                    <a href="functions.html">Planet Functions</a>
+                    <a href="segues.html">Segues</a>
                 </li>
 
                 <li>
-                    <a href="#">Planet Test Yourself</a>
+                    <a href="advancedui.html">Advanced UI</a>
                 </li>
                  <li>
-                    <a href="ios.html">Planet iOS</a>
+                    <a href="wholeapp.html">A Whole App</a>
                 </li>
-                  <li>
-                    <a href="about.html">About Us</a>
-                </li>
+
 
 
             </ul>
-
 
 
         </div>
@@ -83,25 +79,52 @@
         </div> <!--heading -->
         <br>
 
-		<h3>Getting Started </h3>
+
 
 <div id="centerDiv">
-<p>
-        	<video controls="controls" width="800" height="600" name="Video Name" src="example.mov"></video>
+<h3 align="center">Lesson 5: Outlets & Actions </h3>
+ <p>Now that you know how to make an app look like an app, it’s time to make it do something. You can add code to your app that can run when the user taps on a button.</p>
+<h4>Goal:</h4>
+<p>In this lesson, you will learn how to use outlets to change the views in the app when the app is running. You will also learn how to use actions to write code that runs when a button is tapped.
+</p>
+
+<h4>Demonstration:</h4>
+
+<p>Videos will be added after/during reading week</p>
+
+<p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
+
+<h4>Exercises:</h4>
+<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
+
+<ul>
+<li>Look at the example apps from this lesson. Try and connect the outlets and actions to the right places in the view controller to make the apps work.
+</li>
+<li>Make an app that has an animation. Make a button to start the animation and another to stop it.
+</li>
+
+</ul>
+
+<h4>Answers:</h4>
+<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
 
 
- </p>
 
 </div>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="basics.html">
-        <h6>Next Planet!</h6>
+    <a href="segues.html">
+         <img src="img/link1.png">
     </a>
 </div>
 
-<!--<div id="footing">-->
-<!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
+
+</div>
+<div id="moveOn">
+    <p>Carry on the journey</p>
+</div>
+
+
 
 
  <p1> </p1></div>
