--- a/pages/swift/conditionals.html
+++ b/pages/swift/conditionals.html
@@ -3,7 +3,6 @@
 
 <head>
 <link rel="icon" href="icon.png">
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,11 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,8 +23,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-
 
 </head>
 
@@ -38,7 +34,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
@@ -54,7 +50,7 @@
                 <li>
                     <a href="conditionals.html">Planet Conditionals</a>
                 </li>
-                <li>
+                 <li>
                     <a href="variables.html">Planet Arrays</a>
                 </li>
                 <li>
@@ -65,10 +61,10 @@
                     <a href="#">Planet Test Yourself</a>
                 </li>
                  <li>
-                    <a href="ios.html">Planet iOS</a>
+                    <a href="../../ios.html">Planet iOS</a>
                 </li>
                   <li>
-                    <a href="about.html">About Us</a>
+                    <a href="../../about.html">About Us</a>
                 </li>
 
 
@@ -88,33 +84,38 @@
 
 
 
-<div id="centerDiv" class="jumbotron">
-<h3 align="center">Lesson 1: Swift Basics</h3>
+<div id="centerDiv">
+<h3 align="center">Lesson 4: Conditionals</h3>
 
 <h4>Objective:</h4>
-<p>In this lesson you will learn how to print out your very first line of code! This is useful when you require the computer to output some data. You will also learn how to comment on your code which is helpful to you or anyone else reading the code to understand what is going on without having to read each line of code.</p>
-
+<p>In this lesson you will learn how to use ‘If statements’. If statements are useful for making certain blocks of code run only when the condition is met. While a simple mechanic, the many possible applications and therefore, it is beneficial that you fully understand them in order to be a better programmer.</p>
 
 <h4>Demonstration:</h4>
+
 <p>Videos will be added after/during reading week</p>
 
 <p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
 
-
 <h4>Exercises:</h4>
+<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
+
 <ul>
-<li>Write a program that prints your name</li>
-<li>Write a program that prints you address on separate lines</li>
-<li>Comment out your address</li>
+<li>Write a program that prints “Launch successful” if the user inputs a number less than 3 and “Launch failed” otherwise</li>
+<li>Write a program that prints “Launch successful” if the user inputs a number less than 3, “Launch delayed” if less than 8 and “Launch failed” otherwise</li>
+<li>Write a program that takes an input from the user, and identifies if it’s an integer or a character, and then indicates if it’s in</li>
 </ul>
 
 <h4>Answers:</h4>
-<p><<Attach source code files for programs that solve the exercise questions. Make sure they are well commented>></p>
+<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
+
+
+
+
 
 </div>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="loops.html">
+    <a href="variables.html">
          <img src="img/link1.png">
     </a>
 </div>
@@ -124,8 +125,7 @@
 <div id="moveOn">
     <p>Carry on the journey</p>
 </div>
-<!--div class="footing"> -->
- <!--Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
+
 
 
 
@@ -149,7 +149,7 @@
         <p1> Hello </p1>
         <!-- /#page-content-wrapper -->
 
-    </div> -->
+    </div>
     <!-- /#wrapper -->
 
     <!-- jQuery -->
@@ -169,13 +169,9 @@
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
-	<a href="https://twitter.com/solarswiftem">
+		<a href="https://twitter.com/solarswiftem">
 		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
-
-
-
-<br>
 
 </body>
 
