--- a/pages/swift/functions.html
+++ b/pages/swift/functions.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,44 +30,46 @@
 
     <div id="wrapper">
 
-       <!-- Sidebar -->
+        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
-                 <li>
-                    <a href="newproject.html">New Project</a>
-                </li>
-                 <li>
-                    <a href="importingimages.html">Importing Images</a>
+
+                <li>
+                    <a href="installation.html">Planet Installation</a>
                 </li>
                 <li>
-                    <a href="basicui.html">Basic UI</a>
+                    <a href="basics.html">Planet Basics</a>
                 </li>
                 <li>
-                    <a href="autolayout.html">Autolayout</a>
+                    <a href="loops.html">Planet Loops</a>
+                </li>
+                <li>
+                    <a href="conditionals.html">Planet Conditionals</a>
+                </li>
+                 <li>
+                    <a href="variables.html">Planet Arrays</a>
+                </li>
+                <li>
+                    <a href="functions.html">Planet Functions</a>
+                </li>
+
+                <li>
+                    <a href="#">Planet Test Yourself</a>
+                </li>
+                 <li>
+                    <a href="../../ios.html">Planet iOS</a>
                 </li>
                   <li>
-                    <a href="outlets.html">Outlets and Actions</a>
+                    <a href="../../about.html">About Us</a>
                 </li>
-                <li>
-                    <a href="segues.html">Segues</a>
-                </li>
-
-                <li>
-                    <a href="advancedui.html">Advanced UI</a>
-                </li>
-                 <li>
-                    <a href="wholeapp.html">A Whole App</a>
-                </li>
-
 
 
             </ul>
-
 
 
 
@@ -81,55 +83,18 @@
         </div> <!--heading -->
         <br>
 
+		<p> Functions Tutorials here </p>
 
-
-<div id="centerDiv">
-<h3 align="center">Lesson 8: A Whole App </h3>
- <p>
-It is finally time to put all of your knowledge together into one full app! You will be making an app from start to finish so get ready.</p>
-<h4>Goal:</h4>
-<p>In this lesson, you will create a fully working app from start to finish. This will require all the skills that you have learned in the previous lessons.</p>
-
-<h4>Demonstration:</h4>
-
-<p>Videos will be added after/during reading week</p>
-
-<p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
-
-<h4>Exercises:</h4>
-<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
-
-<ul>
-<li>Look at the example apps for this lesson. Some of them have different things missing. Can you figure out what is wrong with them and fix them?
-</li>
-<li>Make an app which tells somebody about yourself. The app should have different pages for different things about you. Try using tables and images to describe what you like.
-
-</li>
-
-</ul>
-
-<h4>Answers:</h4>
-<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
-
-
-
+<div id="leftcolumn">
 
 
 </div>
 <div id="rightcolumn">
-    <div class="link-button-wrapper">
-    <a href="endpage.html">
-         <img src="img/link1.png">
-    </a>
-</div>
-
 
 </div>
-<div id="moveOn">
-    <p>Carry on the journey</p>
-</div>
 
-
+<div id="footing">
+ Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>
 
 
  <p1> </p1></div>
@@ -168,7 +133,6 @@ It is finally time to put all of your knowledge together into one full app! You 
         $("#wrapper").toggleClass("toggled");
     });
     </script>
-
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
