--- a/pages/swift/variables.html
+++ b/pages/swift/variables.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,44 +30,44 @@
 
     <div id="wrapper">
 
-       <!-- Sidebar -->
+          <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
-                 <li>
-                    <a href="newproject.html">New Project</a>
+                <li>
+                    <a href="installation.html">Planet Installation</a>
                 </li>
-                 <li>
-                    <a href="importingimages.html">Importing Images</a>
+               <li>
+                    <a href="basics.html">Planet Basics</a>
                 </li>
                 <li>
-                    <a href="basicui.html">Basic UI</a>
+                    <a href="loops.html">Planet Loops</a>
                 </li>
                 <li>
-                    <a href="autolayout.html">Autolayout</a>
+                    <a href="conditionals.html">Planet Conditionals</a>
+                </li>
+                <li>
+                    <a href="variables.html">Planet Arrays</a>
+                </li>
+                <li>
+                    <a href="functions.html">Planet Functions</a>
+                </li>
+
+                <li>
+                    <a href="#">Planet Test Yourself</a>
+                </li>
+                 <li>
+                    <a href="../../ios.html">Planet iOS</a>
                 </li>
                   <li>
-                    <a href="outlets.html">Outlets and Actions</a>
+                    <a href="../../about.html">About Us</a>
                 </li>
-                <li>
-                    <a href="segues.html">Segues</a>
-                </li>
-
-                <li>
-                    <a href="advancedui.html">Advanced UI</a>
-                </li>
-                 <li>
-                    <a href="wholeapp.html">A Whole App</a>
-                </li>
-
-
 
             </ul>
-
 
 
 
@@ -84,39 +84,34 @@
 
 
 <div id="centerDiv">
-<h3 align="center">Lesson 4: Autolayout </h3>
- <p>So far we’ve been getting XCode to automatically layout our apps for us. Sometimes it doesn’t come out very nicely. You can use “autolayout” to tell the app how you want it to look. You can make it look good no matter which device it runs on.</p>
-<h4>Goal:</h4>
-<p>In this lesson, you will learn how to use autolayout to decide where you want the views in your app to be. You will learn to line up views and determine their sizes. Your apps still won’t do very much but they should look well made.</p>
+<h3 align="center">Lesson 5: Variables</h3>
+
+<h4>Objective:</h4>
+<p>In this lesson you will learn how to use collection types such as arrays and dictionaries. These are useful for managing groups of the same data type.
+
+</p>
+
 
 <h4>Demonstration:</h4>
-
 <p>Videos will be added after/during reading week</p>
 
 <p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
 
+
 <h4>Exercises:</h4>
-<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
-
 <ul>
-<li>Design an app using views and run it on different devices. Make sure the app looks nice on all the different screens.</li>
-<li>Look at the example apps for the lesson. Can you use autolayout to make them look good?
-</li>
-
+<li>Write a program that fills an array of size 5 with names and uses a loop (of your choice) to print it</li>
+<li>Write a program that prints you address on separate lines</li>
+<li>Comment out your address</li>
 </ul>
 
 <h4>Answers:</h4>
-<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
-
-
-
-
-
+<p><<Attach source code files for programs that solve the exercise questions. Make sure they are well commented>></p>
 
 </div>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="outlets.html">
+    <a href="functions.html">
          <img src="img/link1.png">
     </a>
 </div>
@@ -127,7 +122,8 @@
     <p>Carry on the journey</p>
 </div>
 
-
+<!--<div id="footing">-->
+<!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
 
  <p1> </p1></div>
@@ -170,10 +166,9 @@
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
-		<a href="https://twitter.com/solarswiftem">
+	<a href="https://twitter.com/solarswiftem">
 		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
-
 </body>
 
 </html>
