--- a/pages/ios/advancedui.html
+++ b/pages/ios/advancedui.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,11 +30,11 @@
 
     <div id="wrapper">
 
-        <!-- Sidebar -->
+       <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
@@ -70,6 +70,7 @@
 
 
 
+
         </div>
         <br>
         <div id="heading">
@@ -83,10 +84,11 @@
 
 
 <div id="centerDiv">
-<h3 align="center">Lesson 2: Importing Images </h3>
- <p>You may have noticed that your app from the previous lesson had a white square for the icon. In order to make your apps look good you will need to add images. These may be used for the icon, as the background and almost anywhere you like.</p>
+<h3 align="center">Lesson 7: Advanced UI Elements </h3>
+ <p>You already have the skills to make pretty impressive apps now. There are still many other views that can be used to make your apps even more professional. They are a little trickier to use but they can make things a lot easier once you’ve mastered them.</p>
 <h4>Goal:</h4>
-<p>In this lesson, you will learn how to make an app icon of the right size for your apps. You will also learn how to add other images which can be used in other parts of the app.</p>
+<p>In this lesson, you will learn how to use table views. You will learn how to use delegation to make your app respond to taps on different cells in the table.
+</p>
 
 <h4>Demonstration:</h4>
 
@@ -98,10 +100,10 @@
 <p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
 
 <ul>
-<li>Make an app with the icons provided and try running it.</li>
-<li>Make an app with your own icon you made in your favourite drawing app.</li>
-<li>Add a background to your app.
+<li>Look at the example apps for this project. Make the table views work properly by completing the right delegate methods.</li>
+<li>Make an app that segues to different views depending on which cell was tapped in a table view.
 </li>
+
 </ul>
 
 <h4>Answers:</h4>
@@ -114,7 +116,7 @@
 </div>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="basicui.html">
+    <a href="wholeapp.html">
          <img src="img/link1.png">
     </a>
 </div>
