--- a/pages/ios/segues.html
+++ b/pages/ios/segues.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,7 +34,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
