--- a/pages/swift/basics.html
+++ b/pages/swift/basics.html
@@ -3,6 +3,7 @@
 
 <head>
 <link rel="icon" href="icon.png">
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,10 +13,11 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,50 +26,53 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+
+
 </head>
 
 <body>
 
     <div id="wrapper">
 
-       <!-- Sidebar -->
+        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
-                 <li>
-                    <a href="newproject.html">New Project</a>
+                <li>
+                    <a href="installation.html">Planet Installation</a>
                 </li>
-                 <li>
-                    <a href="importingimages.html">Importing Images</a>
+               <li>
+                    <a href="basics.html">Planet Basics</a>
                 </li>
                 <li>
-                    <a href="basicui.html">Basic UI</a>
+                    <a href="loops.html">Planet Loops</a>
                 </li>
                 <li>
-                    <a href="autolayout.html">Autolayout</a>
+                    <a href="conditionals.html">Planet Conditionals</a>
+                </li>
+                <li>
+                    <a href="variables.html">Planet Arrays</a>
+                </li>
+                <li>
+                    <a href="functions.html">Planet Functions</a>
+                </li>
+
+                <li>
+                    <a href="#">Planet Test Yourself</a>
+                </li>
+                 <li>
+                    <a href="../../ios.html">Planet iOS</a>
                 </li>
                   <li>
-                    <a href="outlets.html">Outlets and Actions</a>
+                    <a href="../../about.html">About Us</a>
                 </li>
-                <li>
-                    <a href="segues.html">Segues</a>
-                </li>
-
-                <li>
-                    <a href="advancedui.html">Advanced UI</a>
-                </li>
-                 <li>
-                    <a href="wholeapp.html">A Whole App</a>
-                </li>
-
 
 
             </ul>
-
 
 
 
@@ -83,40 +88,33 @@
 
 
 
-<div id="centerDiv">
-<h3 align="center">Lesson 7: Advanced UI Elements </h3>
- <p>You already have the skills to make pretty impressive apps now. There are still many other views that can be used to make your apps even more professional. They are a little trickier to use but they can make things a lot easier once you’ve mastered them.</p>
-<h4>Goal:</h4>
-<p>In this lesson, you will learn how to use table views. You will learn how to use delegation to make your app respond to taps on different cells in the table.
-</p>
+<div id="centerDiv" class="jumbotron">
+<h3 align="center">Lesson 1: Swift Basics</h3>
+
+<h4>Objective:</h4>
+<p>In this lesson you will learn how to print out your very first line of code! This is useful when you require the computer to output some data. You will also learn how to comment on your code which is helpful to you or anyone else reading the code to understand what is going on without having to read each line of code.</p>
+
 
 <h4>Demonstration:</h4>
-
 <p>Videos will be added after/during reading week</p>
 
 <p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
 
+
 <h4>Exercises:</h4>
-<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
-
 <ul>
-<li>Look at the example apps for this project. Make the table views work properly by completing the right delegate methods.</li>
-<li>Make an app that segues to different views depending on which cell was tapped in a table view.
-</li>
-
+<li>Write a program that prints your name</li>
+<li>Write a program that prints you address on separate lines</li>
+<li>Comment out your address</li>
 </ul>
 
 <h4>Answers:</h4>
-<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
-
-
-
-
+<p><<Attach source code files for programs that solve the exercise questions. Make sure they are well commented>></p>
 
 </div>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="wholeapp.html">
+    <a href="loops.html">
          <img src="img/link1.png">
     </a>
 </div>
@@ -126,7 +124,8 @@
 <div id="moveOn">
     <p>Carry on the journey</p>
 </div>
-
+<!--div class="footing"> -->
+ <!--Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
 
 
@@ -150,7 +149,7 @@
         <p1> Hello </p1>
         <!-- /#page-content-wrapper -->
 
-    </div>
+    </div> -->
     <!-- /#wrapper -->
 
     <!-- jQuery -->
@@ -170,9 +169,13 @@
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
-		<a href="https://twitter.com/solarswiftem">
+	<a href="https://twitter.com/solarswiftem">
 		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
+
+
+
+<br>
 
 </body>
 
