--- a/pages/swift/installation.html
+++ b/pages/swift/installation.html
@@ -12,10 +12,11 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
+        <link href="../../css/custom.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,44 +31,45 @@
 
     <div id="wrapper">
 
-       <!-- Sidebar -->
+        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
-                 <li>
-                    <a href="newproject.html">New Project</a>
+                <li>
+                    <a href="installation.html">Planet Installation</a>
                 </li>
-                 <li>
-                    <a href="importingimages.html">Importing Images</a>
+               <li>
+                    <a href="basics.html">Planet Basics</a>
                 </li>
                 <li>
-                    <a href="basicui.html">Basic UI</a>
+                    <a href="loops.html">Planet Loops</a>
                 </li>
                 <li>
-                    <a href="autolayout.html">Autolayout</a>
+                    <a href="conditionals.html">Planet Conditionals</a>
+                </li>
+                <li>
+                    <a href="variables.html">Planet Arrays</a>
+                </li>
+                <li>
+                    <a href="functions.html">Planet Functions</a>
+                </li>
+
+                <li>
+                    <a href="#">Planet Test Yourself</a>
+                </li>
+                 <li>
+                    <a href="../../ios.html">Planet iOS</a>
                 </li>
                   <li>
-                    <a href="outlets.html">Outlets and Actions</a>
+                    <a href="../../about.html">About Us</a>
                 </li>
-                <li>
-                    <a href="segues.html">Segues</a>
-                </li>
-
-                <li>
-                    <a href="advancedui.html">Advanced UI</a>
-                </li>
-                 <li>
-                    <a href="wholeapp.html">A Whole App</a>
-                </li>
-
 
 
             </ul>
-
 
 
 
@@ -81,53 +83,25 @@
         </div> <!--heading -->
         <br>
 
-
+		<h3>Getting Started </h3>
 
 <div id="centerDiv">
-<h3 align="center">Lesson 1: Starting a new project and running </h3>
- <p>Making apps can sound hard but this lesson will show you how easy it is to start out with something basic. You will see how quick and easy it is to get an app onto a device.</p>
-<h4>Goal:</h4>
-<p>In this lesson, you will learn how to create a new project for an app. The app won’t be that fancy but you will learn how to run it on a simulator as well as on a real iPhone/iPad.</p>
-
-<h4>Demonstration:</h4>
-
-<p>Videos will be added after/during reading week</p>
-
-<p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
-
-<h4>Exercises:</h4>
-<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
-
-<ul>
-<li>Run this lesson’s example app on a simulator.</li>
-<li>Run this lesson’s example app on a real iOS device.
-</li>
-<li>Modify the example app to display your name and try running it.
-</li>
-</ul>
-
-<h4>Answers:</h4>
-<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
+<p>
+        	<video controls="controls" width="800" height="600" name="Video Name" src="example.mov"></video>
 
 
-
-
+ </p>
 
 </div>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="importingimages.html">
-         <img src="img/link1.png">
+    <a href="basics.html">
+        <h6>Next Planet!</h6>
     </a>
 </div>
 
-
-</div>
-<div id="moveOn">
-    <p>Carry on the journey</p>
-</div>
-
-
+<!--<div id="footing">-->
+<!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
 
  <p1> </p1></div>
