--- a/pages/swift/loops.html
+++ b/pages/swift/loops.html
@@ -12,10 +12,10 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,44 +30,45 @@
 
     <div id="wrapper">
 
-      <!-- Sidebar -->
+        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
-                 <li>
-                    <a href="newproject.html">New Project</a>
+                <li>
+                    <a href="installation.html">Planet Installation</a>
                 </li>
-                 <li>
-                    <a href="importingimages.html">Importing Images</a>
+               <li>
+                    <a href="basics.html">Planet Basics</a>
                 </li>
                 <li>
-                    <a href="basicui.html">Basic UI</a>
+                    <a href="loops.html">Planet Loops</a>
                 </li>
                 <li>
-                    <a href="autolayout.html">Autolayout</a>
+                    <a href="conditionals.html">Planet Conditionals</a>
+                </li>
+                 <li>
+                    <a href="variables.html">Planet Arrays</a>
+                </li>
+                <li>
+                    <a href="functions.html">Planet Functions</a>
+                </li>
+
+                <li>
+                    <a href="#">Planet Test Yourself</a>
+                </li>
+                 <li>
+                    <a href="../../ios.html">Planet iOS</a>
                 </li>
                   <li>
-                    <a href="outlets.html">Outlets and Actions</a>
+                    <a href="../../about.html">About Us</a>
                 </li>
-                <li>
-                    <a href="segues.html">Segues</a>
-                </li>
-
-                <li>
-                    <a href="advancedui.html">Advanced UI</a>
-                </li>
-                 <li>
-                    <a href="wholeapp.html">A Whole App</a>
-                </li>
-
 
 
             </ul>
-
 
 
 
@@ -84,40 +85,84 @@
 
 
 <div id="centerDiv">
-<h3 align="center">Lesson 3: Basic UI Elements and properties </h3>
- <p>Apps can be designed by adding different objects to the view. These include things like images and buttons. They won’t be able to do anything yet in this lesson but you should be able to make your app look really good.
-</p>
-<h4>Goal:</h4>
-<p>In this lesson, you will learn to design your apps using some of the basic views. You will be introduced to UILabel, UITextField, UIImageView and UIButton. You will also learn how to change properties like text and colour to customise those views.</p>
+<h3 align="center"><strong>Lesson 2: For Loops</strong></h3>
 
-<h4>Demonstration:</h4>
+<h4><strong>Objective:</strong></h4>
+<p>In this lesson you will learn about for loops. For loops are the most commonly used loop. In comparison to other loops, for loops explicitly make use of a counter to progress towards a termination point.
+</p>
+<p> For loops take the form: </p>
+
+<code>for initialization; condition; increment	{
+
+}</code>
+
+<p>Where initialization is where the counter is initially set, condition is the condition that is tested at the end of the block of code within the loop and increment is where the change to counter is stated.</p>
+
+<p>e.g.</p>
+<code class="codeblock">for var i=0; i<3; i++	{ </code>
+<br>
+	<code>// Code to run goes here </code>
+<br>
+<code>}</code>
+
+<p>In the above example, the counter i is set to 0 and the block of code within the loop will run. After the first time the code runs, i is incremented. </p>
+
+
+<h4><strong>Demonstration:</strong></h4>
 
 <p>Videos will be added after/during reading week</p>
 
+
 <p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
 
-<h4>Exercises:</h4>
+<h4><strong>Exercises:</strong></h4>
 <p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
 
 <ul>
-<li>Make an app with an image and a label to describe the image.
+<li>1.	Write a program that prints the integers 1 to 10 (on their own line)
 </li>
-<li>Make an app with an image and a text field that the user can use to describe the image.
+<li>1.	Write a program that prints “Nadia rules” in an infinite loop
 </li>
-<li>Make an app with an animation using the images from this lesson.
+<li>1.	Write a program that only executes if Nadia allows it to
 </li>
 </ul>
 
-<h4>Answers:</h4>
+<h4><strong>Answers:</strong></h4>
 <p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
 
 
 
+<h3 align="center"><strong>Lesson 3: Repeat-while loops</strong></h3>
+
+<h4><strong>Objective:</strong></h4>
+<p>In this lesson you will learn how to use repeat-while loops.  Repeat-while loops operate in a very similar manner to while loops. The main separator is that the block of code within the loop will execute at least once before the condition is tested to see if the loop will continue to run.
+</p>
+
+
+<h4><strong>Demonstration:</strong></h4>
+<p>Videos will be added after/during reading week</p>
+
+<p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
+
+
+<h4><strong>Exercises:</strong></h4>
+<ul>
+<li>1.	Write a program that prints the integers 1 to 10 (on their own line)</li>
+<li>1.	Write a program that prints </li>
+<li>1.	Write a program that only executes if Nadia allows it to
+</li>
+</ul>
+
+<h4><strong>Answers:</strong></h4>
+<p><<Attach source code files for programs that solve the exercise questions. Make sure they are well commented>></p>
+
+
 
 </div>
+
 <div id="rightcolumn">
     <div class="link-button-wrapper">
-    <a href="autolayout.html">
+    <a href="conditionals.html">
          <img src="img/link1.png">
     </a>
 </div>
@@ -128,7 +173,8 @@
     <p>Carry on the journey</p>
 </div>
 
-
+<!--<div class="footing"> -->
+ <!--Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
 
  <p1> </p1></div>
@@ -151,7 +197,7 @@
         <p1> Hello </p1>
         <!-- /#page-content-wrapper -->
 
-    </div>
+    </div> -->
     <!-- /#wrapper -->
 
     <!-- jQuery -->
@@ -171,10 +217,9 @@
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
-		<a href="https://twitter.com/solarswiftem">
+	<a href="https://twitter.com/solarswiftem">
 		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
-
 </body>
 
 </html>
